syntax="proto3";

option go_package = "/gRPCProto";
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative helloworld/helloworld.proto

service UserService{
  rpc GetUserInfo(UserInfoReq)returns (UserInfoRsp){}
}

message UserInfoReq{
  uint32 uid = 1;
}

message UserInfoRsp{
  uint32 uid = 1;
  string userEmail = 2;
  string name = 3;
}

service CheckLoginService{
  rpc checkLogin(CheckLoginReq)returns(CheckLoginRsp){}
}

message CheckLoginReq{
  string key = 1;
}

message CheckLoginRsp{
  uint32 uid = 1;
  string userName = 2;
}